# mathspad

./: Copyright  Make.rules.in  Makefile.in  README  configure  configure.in  libtool
doc/: function.list
fonts/: Makefile  Makefile.in  PSres.upr  cmsy10.pcf  cmsy10.pcf.Z  cmsy12.pcf  cmsy12.pcf.Z  cmsy15.pcf  cmsy15.pcf.Z  cmsy17.pcf  cmsy17.pcf.Z  cmsy19.pcf  cmsy19.pcf.Z  cmsy21.pcf  cmsy21.pcf.Z  cmsy25.pcf  cmsy25.pcf.Z  fonts.dir  mathsy10.pcf  mathsy10.pcf.Z  mathsy12.pcf  mathsy12.pcf.Z  mathsy14.pcf  mathsy14.pcf.Z  mathsy18.pcf  mathsy18.pcf.Z  mathsy24.pcf  mathsy24.pcf.Z  msam10.pcf  msam10.pcf.Z  msam12.pcf  msam12.pcf.Z  msam15.pcf  msam15.pcf.Z  msam17.pcf  msam17.pcf.Z  msam19.pcf  msam19.pcf.Z  msam21.pcf  msam21.pcf.Z  (+16 more)
help/: Basics.mpd  ConsoleCommands.mpd  Copyright.mpd  Defaults.mpd  FindAndReplace.mpd  GriesSchneiderExample.mpd  Guide.mpd  IndexHelp.mpd  Latex2e.mpd  Latex2eA.mpd  Latex2eB.mpd  Latex2eC.mpd  LatexDocument.mpd  LatexHelp.mpd  Makefile  Makefile.in  Manual.mpd  MathSEditing.mpd  MoreOnWindows.mpd  Philosophy.mpd  Preface.mpd  StencilsandTemplates.mpd  StructureEditing.mpd  SystemAdministration.mpd  TextEditing.mpd  Tutorial.mpd  VersionDefinition.mpd  Welcome.mpd  colortest.mpd  html.mpd  manpage.mpd  ozhelp.mpd
latex/: Makefile  Makefile.in  MathSpad.sty  MathSpadHeader.sty  Umathss.fd  X11color.sty  color.pro  mathpad.sty  mathss.300pk  mathss.600pk  mathss.mf  mathss.tfm  mplogo.tex  mpmacros.tex  oz.sty  specmacros.tex
legacy/: CleanUp  Install  Make.rules  Makefile  SendMessage  checkerrors  config.cache  config.status  configure  libtool  ltmain.sh
maps/: ANSI_X3.4-1968.map  ASMO_449.map  BALTIC.map  BS_4730.map  BS_VIEWDATA.map  Big5.map  CHINESE-EUC.map  CMMathEncoding.map  CMRomanEncoding.map  CMSYEncoding.ascii  CMSYEncoding.map  CMSmallCapsEncoding.map  CMTEXEncoding.map  CP1250.map  CP1251.map  CP1252.map  CP1253.map  CP1254.map  CP1255.map  CP1256.map  CP1257.map  CSA_Z243.4-1985-1.map  CSA_Z243.4-1985-2.map  CSA_Z243.4-1985-GR.map  CSN_369103.map  CWI.map  DEC-MCS.map  DIN_66003.map  DS_2089.map  EBCDIC-AT-DE-A.map  EBCDIC-AT-DE.map  EBCDIC-CA-FR.map  EBCDIC-DK-NO-A.map  EBCDIC-DK-NO.map  EBCDIC-ES-A.map  EBCDIC-ES-S.map  EBCDIC-ES.map  EBCDIC-FI-SE-A.map  EBCDIC-FI-SE.map  EBCDIC-FR.map  (+152 more)
mpk/: MAG.mpk  Makefile  Makefile.in  ctrlq.mpk  define.mpk  delbs.mpk  demo.mpk  dutch.mpk  dutch.orig.mpk  emacs.mpk  extra.mpk  find.mpk  mathpad.msg  mathpad.trans.mpk  menus.mpk  pvs.mpk  pvsmenu.mpk  sol-im.mpk  (+5 more)
(+375 files in other folders)
